src/objects/Payment_Attempt__c.object
<CustomObject>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gateway_Transaction_Id__c</fullName>
        <label>Gateway Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Email__c</fullName>
        <label>Payment Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_Name__c</fullName>
        <label>Payment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <globalPicklist>Payment_Gateways</globalPicklist>
        <label>Payment Option</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Time__c</fullName>
        <label>Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>IN PROGRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILURE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Payment_Option__c</columns>
        <columns>Payment_Name__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Request_Time__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>today</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Payment_Option__c</columns>
        <columns>Payment_Name__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Request_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Payment Attempts</label>
    </listViews>
    <listViews>
        <fullName>yesterday</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Payment_Option__c</columns>
        <columns>Payment_Name__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Request_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterdays Payment Attempts</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Payment Attempt Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>